microservices-demo/central/istio-manifests.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
### The following are all of the remote cluster (boutique1) services
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: adservice-entry
spec:
  hosts:
  - adservice.boutique1.global
  location: MESH_INTERNAL
  ports:
  - name: grpc
    number: 9555
    protocol: GRPC
  resolution: DNS
  addresses:
  - 240.0.0.2
  endpoints:
  - address: 104.154.171.66
    ports:
      grpc: 15443
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: checkoutservice-entry
spec:
  hosts:
  - checkoutservice.boutique1.global
  location: MESH_INTERNAL
  ports:
  - name: grpc
    number: 5050
    protocol: GRPC
  resolution: DNS
  addresses:
  - 240.0.0.3
  endpoints:
  - address: 104.154.171.66
    ports:
      grpc: 15443
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: currencyservice-entry
spec:
  hosts:
  - currencyservice.boutique1.global
  location: MESH_INTERNAL
  ports:
  - name: grpc
    number: 7000
    protocol: GRPC
  resolution: DNS
  addresses:
  - 240.0.0.4
  endpoints:
  - address: 104.154.171.66
    ports:
      grpc: 15443
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: shippingservice-entry
spec:
  hosts:
  - shippingservice.boutique1.global
  location: MESH_INTERNAL
  ports:
  - name: grpc
    number: 50051
    protocol: GRPC
  resolution: DNS
  addresses:
  - 240.0.0.8
  endpoints:
  - address: 104.154.171.66
    ports:
      grpc: 15443
